@@ -298,6 +298,12 @@ function cubesviewerViewCube () {
 				drilldown.splice(0, 0, view.params.xaxis);
 			}
 
+			// Preprocess
+			for (var i = 0; i < drilldown.length; i++) {
+				var parts  = cubesviewer.model.getDimensionParts(drilldown[i]);
+				drilldown[i] = parts.fullDrilldownValue;
+			}
+			
 			// Include drilldown array
 			if (drilldown.length > 0)
 				params["drilldown"] = drilldown;
