@@ -1,5 +1,6 @@
 0.7-devel
-    
+    + Always send dimension level for drilldown (solves
+      issue about single-point cut + drilldown combination)
     + Updated the pure-html examples (embedded views).  
     + Ajax global error handler is no longer used.
     + More user friendly error handling if server not available.
